# mccm

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: RELEASE.md  esp32-flashing-runbook.md  esp32-led-review.html  esp32-led.md  xiao-setup-agent.md  xiao-setup-guide.html
docs/features/: rust-menubar-integration.md  swift-menubar-app.md
esp32-firmware/: Cargo.toml  README.md
esp32-firmware/.cargo/: config.toml
esp32-firmware/src/: main.rs
homebrew/: mccm.rb.template
spec/: 3d-model.md  3d-modeling-setup.md  IMG_4244.HEIC  clawd.stl  seeed-studio-xiao-esp32c6-v2.step
spec/cad/: clawd_stoplight.py  clawd_stoplight.stl
src/: app.rs  led.rs  main.rs  menubar.rs  notification.rs  session.rs  state.rs  ui.rs
swiftbar/: README.md  mccm-status.5s.sh
swiftbar/icons/: README.md
