[package]
name = "micro-claude-code-manager"
version = "0.4.0"
edition = "2021"
description = "TUI dashboard for monitoring Claude Code sessions"
license = "MIT"
repository = "https://github.com/jjroush/mccm"
homepage = "https://github.com/jjroush/mccm"
keywords = ["claude", "cli", "sessions", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "mccm"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
notify = "6"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
